feat: setup Redis and BullMQ infrastructure - Configure Redis client singleton with connection pooling - Set up BullMQ Queue and Worker factories - Add sample test job and worker entrypoint - Add 'worker' script to package.json - Add scripts for testing connection and job flow

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "type-check": "tsc --noEmit",
     "db:migrate": "prisma migrate dev",
     "db:seed": "tsx prisma/seed.ts",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "worker": "tsx src/worker.ts"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
