--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "lucide-react": "^0.562.0",
     "next": "^14.2.0",
     "next-auth": "^4.24.13",
+    "plaid": "^41.0.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "react-hook-form": "^7.71.1",
+    "react-plaid-link": "^4.1.1",
     "recharts": "^3.6.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
