--- a/package.json
+++ b/package.json
@@ -22,21 +22,28 @@
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@tanstack/react-query": "^5.90.16",
+    "@tanstack/react-table": "^8.21.3",
     "bcrypt": "^6.0.0",
     "bullmq": "^5.66.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "ioredis": "^5.9.1",
     "lucide-react": "^0.562.0",
     "next": "^14.2.0",
     "next-auth": "^4.24.13",
+    "papaparse": "^5.5.3",
     "plaid": "^41.0.0",
     "react": "^18.3.0",
+    "react-day-picker": "^9.13.0",
     "react-dom": "^18.3.0",
     "react-hook-form": "^7.71.1",
     "react-plaid-link": "^4.1.1",
@@ -48,6 +55,7 @@
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/node": "^20.11.0",
+    "@types/papaparse": "^5.5.2",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
