--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-hook-form": "^7.71.1",
     "react-plaid-link": "^4.1.1",
     "recharts": "^3.6.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "yahoo-finance2": "^3.11.2",
