chore: pre-release housekeeping and cleanup
- Implement account ownership verification in transactions API
- Update systemd services and shell scripts with configurable placeholders
- Add investment account balance calculation in settings
- Update README with Docker instructions and MIT license
- Remove hardcoded usernames and paths
- Delete internal debug and test scripts

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     restart: unless-stopped
     environment:
       POSTGRES_USER: wealthvue
-      POSTGRES_PASSWORD: wealthvue_dev_password
+      POSTGRES_PASSWORD: ${DB_PASSWORD:-wealthvue_dev_password}
       POSTGRES_DB: wealthvue
     ports:
       - "5433:5432"
