--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "wealthvue",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
+  "author": "Andrew",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/drewzeee/wealthvue.git"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
