--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.71.2",
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -33,6 +35,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
@@ -40,6 +43,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@tanstack/react-query": "^5.90.16",
     "@tanstack/react-table": "^8.21.3",
+    "ai": "^6.0.39",
     "bcrypt": "^6.0.0",
     "bullmq": "^5.66.5",
     "class-variance-authority": "^0.7.1",
@@ -49,14 +53,17 @@
     "lucide-react": "^0.562.0",
     "next": "^14.2.0",
     "next-auth": "^4.24.13",
+    "openai": "^6.16.0",
     "papaparse": "^5.5.3",
     "plaid": "^41.0.0",
     "react": "^18.3.0",
     "react-day-picker": "^9.13.0",
     "react-dom": "^18.3.0",
     "react-hook-form": "^7.71.1",
+    "react-markdown": "^10.1.0",
     "react-plaid-link": "^4.1.1",
     "recharts": "^3.6.0",
+    "remark-gfm": "^4.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
